src/components/project/styles.module.css
/* --------------------------------------------------------------------- */
/* PROJECTS SECTION */
.projects-section {
    text-align: center;
    max-width: 90%;
    margin-top: 60px;
    padding: 80px 0;
  }
  
  .projects-grid {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    column-gap: 2rem;
  }

  .project-card {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    background: var(--color-primary);
    background-image: linear-gradient(180deg, var(--color-primary) 25%, var(--color-secondary) 130%);
    box-shadow: 1px 1px 60px var(--color-gray);
    border-radius: 10px;
    padding: 20px;
    margin-bottom: 20px;

    .swiper-image {
      display: inline-block;
      max-height: 200px;
      width: auto;
      text-align: center;
    }
  }
  
  .projects-header {
    margin: 0 auto 6rem auto;
    max-width: 98%;
    text-shadow: 1px 1px 60px var(--color-white) !important;
  }
  
  .project {
    box-shadow: 1px 1px 60px var(--color-gray);
    border-radius: 2px;
    background: var(--color-primary);
  }

  /* styles.module.css */
.swiper-container {
  position: relative;
}

.swiper-image {
  width: 100%;
  height: auto;
}

.swiper-button-next,
.swiper-button-prev {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  font-size: 24px;
  color: var(--color-white);
  background-color: none;
  border-radius: 50%;
  width: 2rem;
  height: 2rem;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
  transition: all 0.5s ease-in-out;
  z-index: 99999;
}

.swiper-button-next {
  right: 0%;
}

.swiper-button-prev {
  left: 0%;
}

.swiper-button-next:hover {
  right: -1%;
}

.swiper-button-prev:hover {
  left: -1%;
}

  
  .project-title {
    font-size: 1.6rem;
    padding: 2rem 0.5rem;
  }

  .card-description {
    margin-top: 1rem;
  }

  .more-details {
    cursor: pointer;
  }

  .project-icons {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;
    margin-top: 1rem;
    margin-bottom: 1rem;
  }
  
  .project-icon {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25px; /* Ajusta el ancho del icono */
    height: 25px; /* Ajusta el alto del icono */
    margin: 1%; /* Ajusta el margen entre los íconos */
    background-color: var(--color-white);
    border-radius: 6px;
    transition: all 0.2s ease-in-out;
  }
  
  .project-icon svg {
    color: var(--color-primary);
    width: 80%; /* Ajusta el tamaño del ícono dentro del contenedor */
    height: auto;
  }
  
  .project-buttons {
    font-size: 1.2rem !important;
    box-sizing: border-box;
    width: 45%;
    display: inline-block;
    margin: 2%;
  }
  
  .brackets {
    color: var(--color-dark);
    transition: all 1s ease-out;
  }

  a:hover .brackets {
    color: var(--color-white) !important;
    padding: 0 2px !important;
    transition: padding 2s !important;
  }
  
  button:hover .brackets {
    color: var(--color-white) !important;
    padding: 0 2px !important;
    transition: padding 2s !important;
  }

/* Styles for the modal overlay */
.modal-overlay {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.7);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 9999;
}

/* Agrega estilos para el header del modal */
.modal-header {
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: space-between;
  margin-bottom: 3rem;
}

/* Agrega estilos para el contenedor del title del modal */
.modal-container-title {
  display: inline-flex;
  align-items: center;
  gap: 2rem;
}

/* Styles for the modal content */
.modal-content {
  background-color: var(--color-white);
  border-radius: 10px;
  box-shadow: 1px 1px 60px var(--color-secondary);
  padding: 3rem;
  width: 90%;
  height: 90%;
  overflow-y: auto;
  overflow-y: hidden;

  .swiper-image {
    display: inline-block;
    width: auto;
    height: auto;
    max-height: 100%;
    max-width: 100%;
  }
}

/* Styles for modal title */
.modal-title {
  color: var(--color-primary) !important;
  font-size: 1.8rem;
  text-transform: uppercase;
  margin-bottom: 10px;
}

/* Styles for modal technologies */
.modal-technologies {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-end;
  margin-bottom: 1rem;
}

/* Styles for modal technology icon */
.modal-technology-icon {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 1.8rem;
  height: 1.8rem;
  border-radius: 6px;
}

.modal-technology-icon svg {
  width: 1.5rem;
  height: 1.5rem;
}

/* Styles for modal description */
.modal-description {
  height: 25%;
  font-size: 1.4rem;
  overflow-y: auto;
  margin-bottom: 3rem;
}

/* Styles for modal image container */
.modal-image-container {
  max-height: 50%;
  overflow-y: auto;
  padding: 10px;
}

/* Styles for modal button */
/* Styles for the close button */
.modal-close {
  display: flex;
} 

.modal-close > button {
  box-shadow: none !important;
  padding: 0.6rem 1rem !important;
} 

/* Estilos para el scroll-y descripcion */
.modal-description::-webkit-scrollbar {
  width: 8px;
}

.modal-description::-webkit-scrollbar-thumb {
  background-color: var(--color-primary);
  border-radius: 10px;
}

.modal-description::-webkit-scrollbar-thumb:hover {
  background-color: var(--color-secondary);
}

/* Estilos para el scroll-y imagenes */
.modal-image-container::-webkit-scrollbar {
  width: 8px;
}

.modal-image-container::-webkit-scrollbar-thumb {
  background-color: var(--color-primary);
  border-radius: 10px;
}

.modal-image-container::-webkit-scrollbar-thumb:hover {
  background-color: var(--color-secondary);
}

/* Estilos para el scroll-y contenido modal */
.modal-content::-webkit-scrollbar {
  width: 8px;
}

.modal-content::-webkit-scrollbar-thumb {
  background-color: var(--color-primary);
  border-radius: 10px;
}

.modal-content::-webkit-scrollbar-thumb:hover {
  background-color: var(--color-secondary);
}

